- Fixed #1848663 : _MD_AM_ML_NAMESDSC already defined (malanciault)
- Fixed #1849080 : RSS link to backend.php in theme.html (real_therplima)
- Fixed #1848177 : Icon small in /include/cp_functions.php (young-pee)
- Fixed #1848178 : Space between header and content removed (real_therplima)
- Fixed #1847782 : Block y/n not selected by default (real_therplima)


Working Changes : (Changes to be reverted or made definitive)

- Security Audit : making sure that header & redirect_header are followed with exit(); (protection from telnet vulnerability aswell as other instances where the page is viewed with a system that does not understand the 'header' function, it would skip the redirection page and continue displaying the rest of page. (Vaughan)
- Security Audit : making sure that sql query values are all encapsulated in single quotes, helps prevent SQLi. Added intval to values in sql queries that should only be an integer value. (Vaughan)

======================================
Changes from : XOOPS 2.0.18 dev branch
======================================

- Fixed : _MA_USER_SENDMAIL not defined (Garrath/dugris)
- Fixed : $modversion constant language truncated (zoullou/dugris)
- Fixed : City renamed (young-pee)
- Fixed : Grp memberships lost when usr w. no Group perm edits usr act (jegelstaff/dugris)
- Fixed : mistake on RpcDateTimeHandle (Garrath/dugris)
- Fixed : Do not display the comment form if the option module "Allow anonymous post in comments?" is disabled (dugris)
- Fixed : Check modules permissions before displaying "Recent comments blocks" (herve/dugris)
- Fixed : Adding new parameters (width, height, max file size) for uploading ranks (dugris)
- Fixed : cannot herit methods from kernel's class (Garrath/dugris)
- Fixed : Corrected a line hardcoded (young-pee)
- Fixed : Making sure params used in queries are properly sanitized with intval() when they are integer (herve/malanciault)